CB-24581: Made AWS KMS key mandatory if secret encryption is enabled