@@ -7,7 +7,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -27,6 +26,7 @@ import com.sequenceiq.cloudbreak.service.Retry;
 import com.sequenceiq.cloudbreak.validation.ValidationResult;
 import com.sequenceiq.environment.credential.v1.converter.CredentialToCloudCredentialConverter;
 import com.sequenceiq.environment.environment.dto.EnvironmentDto;
+import com.sequenceiq.environment.environment.dto.EnvironmentDtoBase;
 import com.sequenceiq.environment.environment.dto.EnvironmentValidationDto;
 import com.sequenceiq.environment.parameter.dto.AwsDiskEncryptionParametersDto;
 import com.sequenceiq.environment.parameter.dto.AwsParametersDto;
@@ -34,6 +34,9 @@ import com.sequenceiq.environment.parameter.dto.ParametersDto;
 
 @Component
 public class EncryptionKeyArnValidator {
+
+    public static final String NULL_ARN_WITH_SECRET_ENCRYPTION_ENABLED_ERROR_MESSAGE =
+            "An encryption key ARN must be specified, if secret encryption is enabled for the environment!";
 
     private static final Logger LOGGER = LoggerFactory.getLogger(EncryptionKeyArnValidator.class);
 
@@ -60,15 +63,20 @@ public class EncryptionKeyArnValidator {
         this.entitlementService = entitlementService;
     }
 
-    public ValidationResult validateEncryptionKeyArn(String encryptionKeyArn) {
+    public ValidationResult validateEncryptionKeyArn(String encryptionKeyArn, boolean secretEncryptionEnabled) {
         ValidationResult.ValidationResultBuilder validationResultBuilder = ValidationResult.builder();
-        Matcher matcher = ENCRYPTION_KEY_ARN_PATTERN.matcher(encryptionKeyArn.trim());
-        if (!matcher.matches()) {
-            validationResultBuilder.error(String.format("The identifier of the AWS Key Management Service (AWS KMS)" +
-                    "customer master key (CMK) to use for Amazon EBS encryption.%n" +
-                    "You can specify the key ARN in the below format:%n" +
-                    "Key ARN: arn:partition:service:region:account-id:resource-type/resource-id. " +
-                    "For example, arn:aws:kms:us-east-1:012345678910:key/1234abcd-12ab-34cd-56ef-1234567890ab.%n"));
+        if (secretEncryptionEnabled && encryptionKeyArn == null) {
+            validationResultBuilder.error(NULL_ARN_WITH_SECRET_ENCRYPTION_ENABLED_ERROR_MESSAGE);
+        }
+        if (encryptionKeyArn != null) {
+            Matcher matcher = ENCRYPTION_KEY_ARN_PATTERN.matcher(encryptionKeyArn.trim());
+            if (!matcher.matches()) {
+                validationResultBuilder.error(String.format("The identifier of the AWS Key Management Service (AWS KMS)" +
+                        "customer master key (CMK) to use for Amazon EBS encryption.%n" +
+                        "You can specify the key ARN in the below format:%n" +
+                        "Key ARN: arn:partition:service:region:account-id:resource-type/resource-id. " +
+                        "For example, arn:aws:kms:us-east-1:012345678910:key/1234abcd-12ab-34cd-56ef-1234567890ab.%n"));
+            }
         }
         return validationResultBuilder.build();
     }
@@ -76,7 +84,7 @@ public class EncryptionKeyArnValidator {
     public ValidationResult validate(EnvironmentValidationDto environmentValidationDto) {
         String encryptionKeyArn = Optional.ofNullable(environmentValidationDto)
                 .map(EnvironmentValidationDto::getEnvironmentDto)
-                .map(environmentDto -> environmentDto.getParameters())
+                .map(EnvironmentDtoBase::getParameters)
                 .map(ParametersDto::getAwsParametersDto)
                 .map(AwsParametersDto::getAwsDiskEncryptionParametersDto)
                 .map(AwsDiskEncryptionParametersDto::getEncryptionKeyArn)
@@ -101,15 +109,13 @@ public class EncryptionKeyArnValidator {
         try {
             CloudEncryptionKeys encryptionKeys = retryService.testWith2SecDelayMax15Times(() -> cloudPlatformConnectors.get(cloudPlatformVariant).
                     platformResources().encryptionKeys(extendedCloudCredential, region, Collections.emptyMap()));
-            List<String> keyArns = encryptionKeys.getCloudEncryptionKeys().stream().map(CloudEncryptionKey::getName).collect(Collectors.toList());
+            List<String> keyArns = encryptionKeys.getCloudEncryptionKeys().stream().map(CloudEncryptionKey::getName).toList();
             if (keyArns.stream().noneMatch(s -> s.equals(encryptionKeyArn))) {
                 validationResultBuilder.warning("Following encryption keys are retrieved from the cloud " + keyArns +
                         " . The provided encryption key " + encryptionKeyArn +
                         " does not exist in the given region's encryption key list for this credential." +
                         " This is possible if the key is present in a different AWS Account." +
                         " Please ensure that the Key is present and have valid permissions otherwise it would result in failures with EBS volume creation.");
-
-
             }
         } catch (Exception e) {
             LOGGER.error("An unexpected error occurred while trying to fetch the KMS keys from AWS");
